# 104779-cloud_network_programming

./: README.md
exams/2025/05-16/solution/: README.md  app.py  conftest.py  fa.db  init_data.py  main.py  main.sh  model.dbml  model.py  test.sh  utils.py
exams/2025/06-25/solution/: README.md  app.py  config.py  main.py  main.sh  mapping.md  model.dbml  model.py  test.sh  wr.db
lessons/2025/02-18/: client.py  server.py
lessons/2025/02-19/: client.py
lessons/2025/02-25/: client.py  server.py
lessons/2025/02-26/: config.py  server.py  ui.py
lessons/2025/03-04/: alex.yaml  ui.py
lessons/2025/03-05/: README.md  client.ipynb  server.ipynb
lessons/2025/04-01/a/: main.py
lessons/2025/04-01/b/: example_entities.md  main.py
lessons/2025/04-02/sql-model/: model.py  yacr.db
lessons/2025/04-08/: check.py  message.py  model.py  pyproject.toml  user_room.py  yacr.db
lessons/2025/04-09/: auth.py  init_data.py  me.py  model.py  pyproject.toml  yacr.db
lessons/2025/04-15/solution/: test.py  test_yawms.py  yawms.py  yawms_init_data.py
lessons/2025/04-22/: test.py
lessons/2025/04-23/: test.py
lessons/2025/04-29/: auth.py  test.py
lessons/2026/02-25/: server.py
lessons/2026/03-04/: client.py
lessons/2026/03-11/: client.py  main.py  pyproject.toml  server.py
lessons/2026/03-11/alice/: config.yaml
lessons/2026/03-18/: config.py  pyproject.toml  server.py  server.yaml  ui.py
lessons/2026/03-25/: README.md  bob.yaml  pyproject.toml
lessons/2026/04-07/a/: ui.py
lessons/2026/04-07/b/: status.py  ui.py
lessons/2026/04-08/a/: config.py  pyproject.toml  ui.py
lessons/2026/04-08/b/: alex.yaml  status.py  ui.py
lessons/2026/04-15/a/: alex.yaml  status.py  ui.py  (+1 more)
lessons/2026/05-13/2-auth/: me.py  model.py  pyproject.toml  yacr.db
lessons/2026/05-13/2-auth/admin/: message.py
(+58 files in other folders)
